# agent-black-box

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
assets/: openclaw-real-snippet.txt
demo/: openclaw-failure-report.html  openclaw-failure-summary.md  openclaw-failure-trace.jsonl  openclaw-real-diff.md  openclaw-real-report.html  openclaw-real-summary.md  openclaw-real-timeline.md  openclaw-second-timeline.md
demo/hn-screenshot-pack/: SHOTLIST.md  failure-report.html  failure-timeline.md  hn-package.md
docs/: architecture.md  demo-script.md  exposure-copy.md  faq.md  hn-screenshot-workflow.md  launch-plan.md  quickstart.md  roadmap.md  trace-schema.md
examples/: openclaw_trace.jsonl  sample_trace.jsonl  sample_trace_fixed.jsonl
scripts/: build-demo-report.py  demo-gif-sequence.sh  hn-screenshot-pack.sh
src/agent_black_box/: adapters.py  banner.py  cli.py  diffing.py  filtering.py  html_report.py  models.py  parser.py  redaction.py  reporting.py  timeline.py
tests/: test_adapters.py  test_diffing.py  test_filtering.py  test_html_report.py  test_reporting.py  test_timeline.py
