[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-black-box"
version = "0.1.0"
description = "Flight recorder, replay, and diff tooling for AI agent runs"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mike Patraw" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
abb = "agent_black_box.cli:main"
agent-black-box = "agent_black_box.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
